<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_little_8"
                                    app:cardBackgroundColor="@color/white"
                                    app:cardCornerRadius="@dimen/spacing_micro_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/collapsing_photo"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/item_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="@dimen/padding_large_24"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="АЛАВРА КЕТАВРА"
                android:textColor="@color/white"
                android:textSize="@dimen/font_enlarge_24"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/item_user_raiting_ll"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/item_user_rating"
                    style="@style/item_user_stat_panel_values"
                    android:text="5"/>

                <TextView
                    style="@style/item_user_stat_panel_texts"
                    android:text="@string/panel_raiting"/>
            </LinearLayout>

            <LinearLayout
                style="@style/item_user_raiting_ll"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/item_user_code_lines"
                    style="@style/item_user_stat_panel_values"
                    android:text="5"/>

                <TextView
                    style="@style/item_user_stat_panel_texts"
                    android:text="@string/panel_count_code_strings"/>
            </LinearLayout>

            <LinearLayout
                style="@style/item_user_raiting_ll"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/item_user_projects"
                    style="@style/item_user_stat_panel_values"
                    android:text="5"/>

                <TextView
                    style="@style/item_user_stat_panel_texts"
                    android:text="@string/panel_projects"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/item_user_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-regular"
            android:maxLines="3"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/default_about"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/font_normal_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_little_8"
            android:layout_marginTop="@dimen/margin_small_16"
            android:background="@color/grey_light"/>

        <Button
            android:id="@+id/item_user_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/string_item_user_goto"
            android:textColor="@color/color_accent"/>

    </LinearLayout>

</android.support.v7.widget.CardView>