<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_profile_image"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_profile_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/collapsing_photo"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:id="@+id/profile_placrholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/background_placeholder"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/image_camera"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/margin_little_8"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/add_photo_placeholder"
                            android:textColor="@color/white" />

                        <ImageView
                            android:id="@+id/image_camera"
                            android:layout_width="@dimen/size_great_88"
                            android:layout_height="@dimen/size_great_88"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/margin_enlarge_56"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_add_a_photo_black_48px" />
                    </RelativeLayout>
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    app:layout_collapseMode="pin"
                    app:titleTextColor="@color/white">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:id="@+id/ll_stat_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_behavior=".ui.behaviors.StatisticPanelBehavior"
            app:behaviour_max_padding="@dimen/padding_large_24">

            <LinearLayout
                style="@style/panel_item"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/main_tv_raiting"
                    style="@style/panel_sub_item"
                    android:text="5"
                    android:textSize="@dimen/font_enlarge_24" />

                <TextView
                    style="@style/panel_sub_item"
                    android:text="@string/panel_raiting"
                    android:textSize="@dimen/font_increased_16" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/size_delimeter_line"
                android:layout_height="@dimen/spacing_large_56"
                android:background="@color/grey_light" />

            <LinearLayout
                style="@style/panel_item"
                android:layout_gravity="center"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/main_tv_code_lines"
                    style="@style/panel_sub_item"
                    android:text="25000"
                    android:textSize="@dimen/font_enlarge_24" />

                <TextView
                    style="@style/panel_sub_item"
                    android:text="@string/panel_count_code_strings"
                    android:textSize="@dimen/font_increased_16" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/size_delimeter_line"
                android:layout_height="@dimen/spacing_large_56"
                android:background="@color/grey_light" />

            <LinearLayout
                style="@style/panel_item"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/main_tv_projects"
                    style="@style/panel_sub_item"
                    android:text="5"
                    android:textSize="@dimen/font_enlarge_24" />

                <TextView
                    style="@style/panel_sub_item"
                    android:text="@string/panel_projects"
                    android:textSize="@dimen/font_increased_16" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior=".ui.behaviors.NestedScrollBehavior">

            <include layout="@layout/user_profile_layout" />

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_fab_right"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>